--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@angular/ssr": "^20.3.1",
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@sweetalert2/ngx-sweetalert2": "^14.0.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.23.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
