--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@sweetalert2/ngx-sweetalert2": "^14.0.0",
+    "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
+    "ng2-charts": "^8.0.0",
     "pdfmake": "^0.2.20",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.23.0",
